// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CustomButtom Danger 1`] = `
<button
  className="sc-bdfBwQ bUMBdY"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      danger
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Danger Outline 1`] = `
<button
  className="sc-bdfBwQ jbuITX"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      danger
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Danger Outline Rounded 1`] = `
<button
  className="sc-bdfBwQ eDURIS"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      danger
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Danger Rounded 1`] = `
<button
  className="sc-bdfBwQ gDHalZ"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Info 1`] = `
<button
  className="sc-bdfBwQ fGIRkp"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      0990
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Info Outline 1`] = `
<button
  className="sc-bdfBwQ pwXIu"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      0990
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Info Rounded 1`] = `
<button
  className="sc-bdfBwQ ftuCjI"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      0990
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Info Rounded Outline Rounded 1`] = `
<button
  className="sc-bdfBwQ kjmnSD"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      0990
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Light 1`] = `
<button
  className="sc-bdfBwQ hZwFO"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Light Rounded 1`] = `
<button
  className="sc-bdfBwQ fxqlGv"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary 1`] = `
<button
  className="sc-bdfBwQ liuNDO"
  onClick={[Function]}
  size="large"
>
  <div
    className="sc-gsTCUz htGIop"
  >
    <img
      alt="Icon Plus"
      src="video.svg"
    />
     
    <span>
       
      Primary
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Outline 1`] = `
<button
  className="sc-bdfBwQ iEAToV"
  onClick={[Function]}
  size="large"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      Primary
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Outline Rounded 1`] = `
<button
  className="sc-bdfBwQ brEYoU"
  onClick={[Function]}
  size="large"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      Primary
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Rounded 1`] = `
<button
  className="sc-bdfBwQ hmgyKD"
  onClick={[Function]}
  size="large"
>
  <div
    className="sc-gsTCUz htGIop"
  >
    <img
      alt="Icon Plus"
      src="video.svg"
    />
     
    <span>
       
      Primary
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Warning 1`] = `
<button
  className="sc-bdfBwQ cRYUcN"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Warning Outline 1`] = `
<button
  className="sc-bdfBwQ VUjkD"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Warning Outline Rounded 1`] = `
<button
  className="sc-bdfBwQ ikeVLq"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Primary Warning Rounded 1`] = `
<button
  className="sc-bdfBwQ jrwqOD"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Secondary Warning 1`] = `
<button
  className="sc-bdfBwQ egpvna"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Secondary Warning Outline 1`] = `
<button
  className="sc-bdfBwQ iTuNfb"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Secondary Warning Outline Rounded 1`] = `
<button
  className="sc-bdfBwQ kPtkjq"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Secondary Warning Rounded 1`] = `
<button
  className="sc-bdfBwQ RdtED"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
     
    <span>
       
      7 min
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Success 1`] = `
<button
  className="sc-bdfBwQ gzwEpF"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
    <img
      alt="Icon Video"
      src="video.svg"
    />
     
    <span>
       
      video conferencia
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Success Outline 1`] = `
<button
  className="sc-bdfBwQ WwQFj"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
    <img
      alt="Icon Video"
      src="video.svg"
    />
     
    <span>
       
      video conferencia
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Success Outline Rounded 1`] = `
<button
  className="sc-bdfBwQ iCofPG"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
    <img
      alt="Icon Video"
      src="video.svg"
    />
     
    <span>
       
      video conferencia
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomButtom Success Rounded 1`] = `
<button
  className="sc-bdfBwQ kvBtws"
  onClick={[Function]}
  size="medium"
>
  <div
    className="sc-gsTCUz htGIop"
  >
    <img
      alt="Icon Video"
      src="video.svg"
    />
     
    <span>
       
      video conferencia
       
    </span>
  </div>
</button>
`;

exports[`Storyshots CustomMenu Horizontal 1`] = `
<div
  className="sc-dlfnbm fmQbiS"
>
  <div
    className="sc-hKgILt hbnhTJ"
  >
    <nav>
      <ul>
        <li
          id="ele0"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Todas
          </span>
        </li>
        <li
          id="ele1"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Pa Virtual
          </span>
        </li>
        <li
          id="ele2"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Premium
          </span>
        </li>
        <li
          id="ele3"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Teletriagem
          </span>
        </li>
        <li
          id="ele4"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            Hematologia
          </span>
        </li>
        <li
          id="ele5"
          onClick={[Function]}
          onMouseOver={[Function]}
        >
          <span>
            COVID-19
          </span>
        </li>
      </ul>
    </nav>
  </div>
  <section
    className="sc-eCssSg kfUUyx"
  >
    <div>
       teste0 
    </div>
  </section>
</div>
`;

exports[`Storyshots DefaultMenu Vertical 1`] = `
Array [
  <div
    className="sc-gKsewC fiigdW"
    id="hamburguer"
    onClick={[Function]}
  >
    <img
      alt="Menu hamburguer"
      src="menu-hamburguer.png"
    />
  </div>,
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="sc-jSgupP kICXO"
      id="menu"
    >
      <div
        className="default-logo"
      >
        <img
          alt="Logo Einsten"
          src="logo-einsten.svg"
        />
      </div>
      <nav>
        <ul>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                acionamentos.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                agendamentos.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                hitstorico.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                support.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/home"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                activity.svg
              </svg>
            </a>
          </li>
          <li>
            <a
              href="/"
              onClick={[Function]}
            >
              <svg
                onClick={[Function]}
              >
                gerenciar_cancelamentos.svg
              </svg>
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <section
      className="sc-iBPRYJ eCNljB"
    >
      awq
    </section>
  </div>,
]
`;
